fix issue with overflow

--- a/app/assets/stylesheets/api/main.scss
+++ b/app/assets/stylesheets/api/main.scss
@@ -24,6 +24,8 @@
   .content-container {
     width: 70%;
     padding: 20px;
+    overflow: scroll;
+    height: 70vh;
   }
 
   li {
